@@ -1,4 +1,7 @@
 2007-01-26  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amstatus.pl.in: Exit with a status.
+
+2007-01-26  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amstatus.pl.in: Detect failed dump to tape.
 
 2007-01-25  Jean-Louis Martineau <martineau@zmanda.com>
